WIP : Testing OpenAPI generation
